add loader style

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -35,6 +35,10 @@ body {
     }
   }
 
+  &__loader {
+    padding-block: 2.5rem;
+  }
+
   &__text {
     color: $light-cyan;
     padding-block: 1.3rem;
@@ -55,7 +59,7 @@ body {
     border: none;
     padding: 1.2rem;
     transform: translateY(2.5rem);
-    transition: box-shadow 500ms ease-in-out;
+    transition: box-shadow 500ms ease-in-out, transform 1s ease-in-out;
 
     &:hover {
       box-shadow: 0 0 45px $neon-green;
